fixed: navbar spacing

--- a/public/css/category.css
+++ b/public/css/category.css
@@ -9,6 +9,8 @@
 
 .navbar-bg{
     background: var(--navbar-bg);
+    padding: 1rem 1rem 0rem;
+
 }
 
 .nav-zindex{
